remove console.log

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -969,7 +969,7 @@
                 url: api_url+"/banner/list",
                 dataType: "json",
                 success: function (result, status, xhr) {
-                    console.log(result)
+                    // console.log(result)
                 },
                 error: function (xhr, status, error) {
                     alert("Result: " + status + " " + error + " " + xhr.status + " " + xhr.statusText)
