--- a/frontend/index.html
+++ b/frontend/index.html
@@ -964,17 +964,17 @@
                 });
             });
 
-            $.ajax({
-                type: "GET",
-                url: api_url+"/banner/list",
-                dataType: "json",
-                success: function (result, status, xhr) {
-                    // console.log(result)
-                },
-                error: function (xhr, status, error) {
-                    alert("Result: " + status + " " + error + " " + xhr.status + " " + xhr.statusText)
-                }
-            });
+            // $.ajax({
+            //     type: "GET",
+            //     url: api_url+"/banner/list",
+            //     dataType: "json",
+            //     success: function (result, status, xhr) {
+            //         console.log(result)
+            //     },
+            //     error: function (xhr, status, error) {
+            //         alert("Result: " + status + " " + error + " " + xhr.status + " " + xhr.statusText)
+            //     }
+            // });
 
             $('.sliderbanner').slick({
                 autoplay: true,
