--- a/frontend/index.html
+++ b/frontend/index.html
@@ -907,7 +907,7 @@
                 stroke="#F96D00" />
         </svg></div>
     <script src="js/jquery.min.js"></script>
-    <script src="js/jquery-migrate-3.0.1.min.js+popper.min.js+bootstrap.min.js.pagespeed.jc.ZKj4wTk8aL.js"></script>
+    <script src="js/jquery-migrate-3.0.1.min.js"></script>
     <script>eval(mod_pagespeed_Udcyhb9c2D);</script>
     <script>eval(mod_pagespeed_DFAGfkuvS2);</script>
     <script>eval(mod_pagespeed_M3P0bw$3eF);</script>
