--- a/frontend/index.html
+++ b/frontend/index.html
@@ -912,13 +912,13 @@
     <script>eval(mod_pagespeed_DFAGfkuvS2);</script>
     <script>eval(mod_pagespeed_M3P0bw$3eF);</script>
     <script
-        src="js/jquery.easing.1.3.js+jquery.waypoints.min.js+jquery.stellar.min.js+owl.carousel.min.js.pagespeed.jc.OGMP_yr1ot.js"></script>
+        src="js/jquery.easing.1.3.js"></script>
     <script>eval(mod_pagespeed_AxF3aNNdP8);</script>
     <script>eval(mod_pagespeed_WSJkyIcJ0Y);</script>
     <script>eval(mod_pagespeed_ZfhpzvtydJ);</script>
     <script>eval(mod_pagespeed_GUluxpY0vO);</script>
     <script
-        src="js/jquery.magnific-popup.min.js+jquery.animateNumber.min.js+bootstrap-datepicker.js+jquery.timepicker.min.js+scrollax.min.js.pagespeed.jc.Ky21XgJlHu.js"></script>
+        src="js/jquery.magnific-popup.min.js"></script>
     <script>eval(mod_pagespeed_c$OxnWiaz5);</script>
     <script>eval(mod_pagespeed_PHXrUG1pI_);</script>
     <script>eval(mod_pagespeed_nFFJ_JbqfP);</script>
