--- a/frontend/index.html
+++ b/frontend/index.html
@@ -926,7 +926,7 @@
     <script>eval(mod_pagespeed_MiF2CyD9s2);</script>
     <script
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
-    <script src="js/google-map.js+main.js.pagespeed.jc.CsnhfaY0m0.js"></script>
+    <script src="js/google-map.js+main.js"></script>
     <script>eval(mod_pagespeed_PCAJGgbmNY);</script>
     <script>eval(mod_pagespeed_WeC_GqZ9y2);</script>
     <script defer src="https://static.cloudflareinsights.com/beacon.min.js"
