--- a/frontend/blog.html
+++ b/frontend/blog.html
@@ -436,18 +436,18 @@
                 stroke="#F96D00" />
         </svg></div>
     <script src="js/jquery.min.js"></script>
-    <script src="js/jquery-migrate-3.0.1.min.js+popper.min.js+bootstrap.min.js.pagespeed.jc.ZKj4wTk8aL.js"></script>
+    <script src="js/jquery-migrate-3.0.1.min.js"></script>
     <script>eval(mod_pagespeed_Udcyhb9c2D);</script>
     <script>eval(mod_pagespeed_DFAGfkuvS2);</script>
     <script>eval(mod_pagespeed_M3P0bw$3eF);</script>
     <script
-        src="js/jquery.easing.1.3.js+jquery.waypoints.min.js+jquery.stellar.min.js+owl.carousel.min.js.pagespeed.jc.OGMP_yr1ot.js"></script>
+        src="js/jquery.easing.1.3.js"></script>
     <script>eval(mod_pagespeed_AxF3aNNdP8);</script>
     <script>eval(mod_pagespeed_WSJkyIcJ0Y);</script>
     <script>eval(mod_pagespeed_ZfhpzvtydJ);</script>
     <script>eval(mod_pagespeed_GUluxpY0vO);</script>
     <script
-        src="js/jquery.magnific-popup.min.js+jquery.animateNumber.min.js+bootstrap-datepicker.js+jquery.timepicker.min.js+scrollax.min.js.pagespeed.jc.Ky21XgJlHu.js"></script>
+        src="js/jquery.magnific-popup.min.js"></script>
     <script>eval(mod_pagespeed_c$OxnWiaz5);</script>
     <script>eval(mod_pagespeed_PHXrUG1pI_);</script>
     <script>eval(mod_pagespeed_nFFJ_JbqfP);</script>
@@ -455,7 +455,7 @@
     <script>eval(mod_pagespeed_MiF2CyD9s2);</script>
     <script
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
-    <script src="js/google-map.js+main.js.pagespeed.jc.CsnhfaY0m0.js"></script>
+    <script src="js/google-map.js"></script>
     <script>eval(mod_pagespeed_PCAJGgbmNY);</script>
     <script>eval(mod_pagespeed_WeC_GqZ9y2);</script>
     <script defer src="https://static.cloudflareinsights.com/beacon.min.js"
