--- a/frontend/blog-single.html
+++ b/frontend/blog-single.html
@@ -29,7 +29,7 @@
                         </div>
                         <div class="pr-md-4 pl-md-3 pl-3 text">
                             <p class="con"><span>Free Call</span> <span>(+66)2 718 7304-6</span></p>
-                            <p class="con">Call Us Now 24/7 Customer Support</p>
+                            <p class="con">08:00 am - 05:00 pm / Mon-Fri</p>
                         </div>
                     </div>
                     <div class="col-md-4 d-flex topper mb-md-0 align-items-center">
