--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>SPAN COMPANY - ENGINERRING CONSULTANT</title>
+    <title>Span Company Limited</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap" rel="stylesheet">
@@ -29,7 +29,7 @@
                         </div>
                         <div class="pr-md-4 pl-md-3 pl-3 text">
                             <p class="con"><span>Free Call</span> <span>(+66)2 718 7304-6</span></p>
-                            <p class="con">Call Us Now 24/7 Customer Support</p>
+                            <p class="con">08:00 am - 05:00 pm / Mon-Fri</p>
                         </div>
                     </div>
                     <div class="col-md-4 d-flex topper mb-md-0 align-items-center">
@@ -80,7 +80,7 @@
                                 <p class="mb-4 bannerdes">Span Company Limited was established in 1978 as a
                                     Thai national engineering consultant with a commitment to develop 
                                     and upgrade engineering consulting services to "World standards".</p>
-                                <p><a href="index.html#" class="btn btn-primary">Our Services</a> <a href="index.html#"
+                                <p><a href="http://www.spancompany.com/services.html" class="btn btn-primary">Our Services</a> <a href="index.html#"
                                         class="btn btn-white" data-toggle="modal" data-target="#exampleModalCenter">Request A
                                         Quote</a></p>
                             </div>
@@ -194,7 +194,7 @@
                                 <div class="icon">
                                     <img src="images/icon-about02.svg" alt="">
                                 </div>
-                                <h3>We’re in this business since 1975 and We provide the best “ Engineering Consultant ”services</h3>
+                                <h3>We’re in this business since 1978 and We provide the best “ Engineering Consultant ”services</h3>
                             </div>
                             <p>An Engineering consultant services with a commitment to<br>
                                 “ World standards ” and We provide the best of Engineering
@@ -220,7 +220,7 @@
                         <div class="overlay"></div>
                         <h2>Providing Personalized and High Quality Services</h2>
                         <p>An Engineering consultant  services with a commitment  to “ World standards ”</p>
-                        <p class="mb-0"><a href="index.html#" class="btn btn-primary px-4 py-3">Request A Quote</a></p>
+                        <p class="mb-0"><a href="index.html#" class="btn btn-primary px-4 py-3" data-toggle="modal" data-target="#exampleModalCenter"> Request A Quote</a></p>
                     </div>
                 </div>
             </div>
@@ -485,7 +485,7 @@
             <div class="row">
                 <div class="col-md-4 col-sm-6">
                     <div class="project">
-                        <a href="project-detail02.html" class="img d-flex align-items-center"
+                        <a href="http://spancompany.com/project-detail02.html" class="img d-flex align-items-center"
                             style="background-image:url('images/lastproject01.jpg')">
                             <div class="icon d-flex align-items-center justify-content-center mb-5"><span
                                     class="fa fa-plus"></span></div>
@@ -499,7 +499,7 @@
                 </div>
                 <div class="col-md-4 col-sm-6">
                     <div class="project">
-                        <a href="project-detail01.html" class="img d-flex align-items-center"
+                        <a href="http://spancompany.com/project-detail03.html" class="img d-flex align-items-center"
                             style="background-image:url('images/lastproject02.jpg')">
                             <div class="icon d-flex align-items-center justify-content-center mb-5"><span
                                     class="fa fa-plus"></span></div>
@@ -513,7 +513,7 @@
                 </div>
                 <div class="col-md-4 col-sm-6">
                     <div class="project">
-                        <a href="project-detail03.html" class="img d-flex align-items-center"
+                        <a href="#" class="img d-flex align-items-center"
                             style="background-image:url('images/lastproject03.jpg')">
                             <div class="icon d-flex align-items-center justify-content-center mb-5"><span
                                     class="fa fa-plus"></span></div>
@@ -769,50 +769,44 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6">
+                
+                <div class="col-lg col-md-6">
                     <div class="ftco-footer-widget">
                         <h2 class="ftco-heading-2">Links</h2>
+                        <ul class="list-unstyled list-footer">
+                            <li><a href="index.html#"><span class="fa fa-chevron-right mr-2"></span>Home</a></li>
+                            <li><a href="index.html#"><span class="fa fa-chevron-right mr-2"></span>About</a></li>
+                            <li><a href="index.html#"><span class="fa fa-chevron-right mr-2"></span>Services</a></li>
+                            <li><a href="index.html#"><span class="fa fa-chevron-right mr-2"></span>Projects</a></li>
+                            <li><a href="index.html#"><span class="fa fa-chevron-right mr-2"></span>Blog</a></li>
+                            <li><a href="index.html#"><span class="fa fa-chevron-right mr-2"></span>Contact</a></li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="col-lg-4 col-md-6">
+                    <div class="ftco-footer-widget">
+                        <h2 class="ftco-heading-2">Services</h2>
                         <div class="d-flex list-footer">
-                            <ul class="list-unstyled mr-md-4">
-                                <li><a href="index.html#"><span class="fa fa-chevron-right mr-2"></span>Project</a></li>
-                                <li><a href="index.html#"><span class="fa fa-chevron-right mr-2"></span>About Us</a>
-                                </li>
-                                <li><a href="index.html#"><span class="fa fa-chevron-right mr-2"></span>Services</a>
-                                </li>
-                                <li><a href="index.html#"><span class="fa fa-chevron-right mr-2"></span>Blog Posts</a>
-                                </li>
-                                <li><a href="index.html#"><span class="fa fa-chevron-right mr-2"></span>Industries</a>
-                                </li>
+                            <ul class="list-unstyled mr-md-4" style="width: 100%;">
+                                <li><a href="index.html#"><span class="fa fa-chevron-right mr-2"></span>Industrial</a></li>
+                                <li><a href="index.html#"><span class="fa fa-chevron-right mr-2"></span>Buildings and infrastructure</a></li>
+                                <li><a href="index.html#"><span class="fa fa-chevron-right mr-2"></span>Real Estate</a></li>
+                                <li><a href="index.html#"><span class="fa fa-chevron-right mr-2"></span>Surveying and Mapping</a></li>
                             </ul>
                             <ul class="list-unstyled ml-md-5">
-                                <li><a href="index.html#"><span class="fa fa-chevron-right mr-2"></span>Contact</a></li>
-                                <li><a href="index.html#"><span class="fa fa-chevron-right mr-2"></span>Help</a></li>
-                                <li><a href="index.html#"><span class="fa fa-chevron-right mr-2"></span>Privacy
-                                        Policy</a></li>
-                                <li><a href="index.html#"><span class="fa fa-chevron-right mr-2"></span>Terms of Use</a>
-                                </li>
+                                <li><a href="index.html#"><span class="fa fa-chevron-right mr-2"></span>Transportation</a></li>
+                                <li><a href="index.html#"><span class="fa fa-chevron-right mr-2"></span>Oil, Gas and Chemical Industry</a></li>
+                                <li><a href="index.html#"><span class="fa fa-chevron-right mr-2"></span>Drainage and flood protection</a></li>
+                                <li><a href="index.html#"><span class="fa fa-chevron-right mr-2"></span>Specialized Consulting</a></li>
                             </ul>
                         </div>
                     </div>
                 </div>
+
                 <div class="col-lg col-md-6">
                     <div class="ftco-footer-widget">
-                        <h2 class="ftco-heading-2">Services</h2>
-                        <ul class="list-unstyled list-footer">
-                            <li><a href="index.html#"><span class="fa fa-chevron-right mr-2"></span>Customer
-                                    Services</a></li>
-                            <li><a href="index.html#"><span class="fa fa-chevron-right mr-2"></span>Prompt Delivery</a>
-                            </li>
-                            <li><a href="index.html#"><span class="fa fa-chevron-right mr-2"></span>Reliable
-                                    Equipment</a></li>
-                            <li><a href="index.html#"><span class="fa fa-chevron-right mr-2"></span>New Heavy
-                                    Equipment</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-lg col-md-6">
-                    <div class="ftco-footer-widget">
-                        <h2 class="ftco-heading-2">Have a Questions?</h2>
+                        <h2 class="ftco-heading-2">Have a Questions ?</h2>
                         <div class="block-23 mb-3">
                             <ul>
                                 <li><a href="index.html#"><span class="fa fa-map-marker mr-3"></span><span class="text">Google Map</span></a></li>
@@ -964,17 +958,17 @@
                 });
             });
 
-            // $.ajax({
-            //     type: "GET",
-            //     url: api_url+"/banner/list",
-            //     dataType: "json",
-            //     success: function (result, status, xhr) {
-            //         console.log(result)
-            //     },
-            //     error: function (xhr, status, error) {
-            //         alert("Result: " + status + " " + error + " " + xhr.status + " " + xhr.statusText)
-            //     }
-            // });
+            $.ajax({
+                type: "GET",
+                url: api_url+"/banner/list",
+                dataType: "json",
+                success: function (result, status, xhr) {
+                    console.log(result)
+                },
+                error: function (xhr, status, error) {
+                    console.error("Result: " + status + " " + error + " " + xhr.status + " " + xhr.statusText)
+                }
+            });
 
             $('.sliderbanner').slick({
                 autoplay: true,
