--- a/frontend/about-quality.html
+++ b/frontend/about-quality.html
@@ -29,7 +29,7 @@
                         </div>
                         <div class="pr-md-4 pl-md-3 pl-3 text">
                             <p class="con"><span>Free Call</span> <span>(+66)2 718 7304-6</span></p>
-                            <p class="con">Call Us Now 24/7 Customer Support</p>
+                            <p class="con">08:00 am - 05:00 pm / Mon-Fri</p>
                         </div>
                     </div>
                     <div class="col-md-4 d-flex topper mb-md-0 align-items-center">
@@ -112,9 +112,6 @@
                 </div>
             </div>
             <div class="text-content pl-30">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis, eius mollitia suscipit, quisquam doloremque distinctio perferendis et 
-                    doloribus unde architecto optio laboriosam porro adipisci sapiente officiis nemo accusamus ad praesentium? Esse minima nisi et. Dolore 
-                    perferendis, enim praesentium omnis, iste doloremque quia officia optio deserunt molestiae voluptates soluta architecto tempora.</p>
                 <p>Over the past 40 years, Span Co., Ltd. has continually developed its capabilities in many areas in order to be accepted by both domestic and international users. In addition, the company has given importance with continuous development of personnel quality and the company is also a member of the Council of Engineers and a member of the Engineering Institute of Thailand under the royal patronage as well</p>
                 <p>We will continue to strive to provide the best service to our customers through efficient management. To make your project successful 
                     according to the plan and budget By considering the quality and satisfaction of the customers as important</p>
