--- a/frontend/services.html
+++ b/frontend/services.html
@@ -409,17 +409,17 @@
                     </button>
                 </div>
                 <div class="modal-body p-4 p-md-5">
-                    <form action="#" class="appointment-form ftco-animate">
+                    <form id="inquire-form" action="#" class="appointment-form ftco-animate">
                         <h3>Request Quote</h3>
                         <div class="">
                             <div class="form-group">
-                                <input type="text" class="form-control" placeholder="First Name">
+                                <input type="text" name="fname" class="form-control" placeholder="First Name" required>
                             </div>
                             <div class="form-group">
-                                <input type="text" class="form-control" placeholder="Last Name">
+                                <input type="text" name="lname" class="form-control" placeholder="Last Name" required>
                             </div>
                             <div class="form-group">
-                                <input type="text" class="form-control" placeholder="Phone">
+                                <input type="text" name="phone" class="form-control" placeholder="Phone" required>
                             </div>
                         </div>
                         <div class="">
@@ -427,15 +427,15 @@
                                 <div class="form-field">
                                     <div class="select-wrap">
                                         <div class="icon"><span class="fa fa-chevron-down"></span></div>
-                                        <select name="" id="" class="form-control">
+                                        <select name="service_name" class="form-control" required>
                                             <option value="">Select Your Services</option>
-                                            <option value="">Architecture</option>
-                                            <option value="">Renovation</option>
-                                            <option value="">Construction</option>
-                                            <option value="">Interior &amp; Exterior</option>
-                                            <option value="">Chemical Research</option>
-                                            <option value="">Petroleum &amp; Gas</option>
-                                            <option value="">Other Services</option>
+                                            <option value="Architecture">Architecture</option>
+                                            <option value="Renovation">Renovation</option>
+                                            <option value="Construction">Construction</option>
+                                            <option value="Interior Exterior">Interior &amp; Exterior</option>
+                                            <option value="Chemical Research">Chemical Research</option>
+                                            <option value="Petroleum">Petroleum &amp; Gas</option>
+                                            <option value="Other Services">Other Services</option>
                                         </select>
                                     </div>
                                 </div>
@@ -443,8 +443,7 @@
                         </div>
                         <div class="">
                             <div class="form-group">
-                                <textarea name="" id="" cols="30" rows="4" class="form-control"
-                                    placeholder="Message"></textarea>
+                                <textarea name="message" id="" cols="30" rows="4" class="form-control" placeholder="Message" required></textarea>
                             </div>
                             <div class="form-group">
                                 <input type="submit" value="Request A Quote" class="btn btn-primary py-3 px-4">
@@ -486,6 +485,34 @@
     <script>eval(mod_pagespeed_WeC_GqZ9y2);</script>
     <script defer src="https://static.cloudflareinsights.com/beacon.min.js"
         data-cf-beacon='{"rayId":"670b44bc5e81271d","token":"cd0b4b3a733644fc843ef0b185f98241","version":"2021.6.0","si":10}'></script>
+    <script>
+        var url = window.location.href.split('://')
+            url[1] = url[1].split('/').shift()
+            url[1] = url[1].split(':').shift()
+        var api_url = url.join('://')
+
+        $( "#inquire-form" ).submit(function( event ) {
+            event.preventDefault();
+            var inputs = $('#inquire-form :input');
+            var values = {};
+            inputs.each(function() {
+                values[this.name] = $(this).val();
+            });
+            $.ajax({
+                type: "POST",
+                url: api_url+"/contact/inquire_push",
+                data: values,
+                dataType: "json",
+                success: function (result, status, xhr) {
+                    alert("Message has been sent successfully.")
+                    window.location.href="/index.html"
+                },
+                error: function (xhr, status, error) {
+                    alert("Result: " + status + " " + error + " " + xhr.status + " " + xhr.statusText)
+                }
+            });
+        });
+    </script>
 </body>
 
 </html>
