--- a/frontend/project.html
+++ b/frontend/project.html
@@ -90,7 +90,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row">
+            <div class="row" id="project-container">
                 <div class="col-md-4 col-sm-6">
                     <div class="project">
                         <a href="#" class="img d-flex align-items-center"
@@ -341,17 +341,17 @@
                     </button>
                 </div>
                 <div class="modal-body p-4 p-md-5">
-                    <form action="#" class="appointment-form ftco-animate">
+                    <form id="inquire-form" action="#" class="appointment-form ftco-animate">
                         <h3>Request Quote</h3>
                         <div class="">
                             <div class="form-group">
-                                <input type="text" class="form-control" placeholder="First Name">
+                                <input type="text" name="fname" class="form-control" placeholder="First Name" required>
                             </div>
                             <div class="form-group">
-                                <input type="text" class="form-control" placeholder="Last Name">
+                                <input type="text" name="lname" class="form-control" placeholder="Last Name" required>
                             </div>
                             <div class="form-group">
-                                <input type="text" class="form-control" placeholder="Phone">
+                                <input type="text" name="phone" class="form-control" placeholder="Phone" required>
                             </div>
                         </div>
                         <div class="">
@@ -359,15 +359,15 @@
                                 <div class="form-field">
                                     <div class="select-wrap">
                                         <div class="icon"><span class="fa fa-chevron-down"></span></div>
-                                        <select name="" id="" class="form-control">
+                                        <select name="service_name" class="form-control" required>
                                             <option value="">Select Your Services</option>
-                                            <option value="">Architecture</option>
-                                            <option value="">Renovation</option>
-                                            <option value="">Construction</option>
-                                            <option value="">Interior &amp; Exterior</option>
-                                            <option value="">Chemical Research</option>
-                                            <option value="">Petroleum &amp; Gas</option>
-                                            <option value="">Other Services</option>
+                                            <option value="Architecture">Architecture</option>
+                                            <option value="Renovation">Renovation</option>
+                                            <option value="Construction">Construction</option>
+                                            <option value="Interior Exterior">Interior &amp; Exterior</option>
+                                            <option value="Chemical Research">Chemical Research</option>
+                                            <option value="Petroleum">Petroleum &amp; Gas</option>
+                                            <option value="Other Services">Other Services</option>
                                         </select>
                                     </div>
                                 </div>
@@ -375,8 +375,7 @@
                         </div>
                         <div class="">
                             <div class="form-group">
-                                <textarea name="" id="" cols="30" rows="4" class="form-control"
-                                    placeholder="Message"></textarea>
+                                <textarea name="message" id="" cols="30" rows="4" class="form-control" placeholder="Message" required></textarea>
                             </div>
                             <div class="form-group">
                                 <input type="submit" value="Request A Quote" class="btn btn-primary py-3 px-4">
@@ -418,6 +417,106 @@
     <script>eval(mod_pagespeed_WeC_GqZ9y2);</script>
     <script defer src="https://static.cloudflareinsights.com/beacon.min.js"
         data-cf-beacon='{"rayId":"670b44bc58ca26c5","token":"cd0b4b3a733644fc843ef0b185f98241","version":"2021.6.0","si":10}'></script>
+    <script>
+        getData();
+        function onChangePage(n){
+            var total = getData(n);
+            var cap = Math.ceil(total/9) ;
+            var ul = `<ul>` ;
+                // ul += `<li onclick="onChangePage('prev')"><a href="project.html#">&lt;</a></li>`
+            for(c = 1 ; c <= cap ; c++){
+                if(c == n){
+                    ul += `<li class="active"><span>${c}</span></li>`
+                }else{
+                    ul += `<li onclick="onChangePage(${c})"><a href="project.html#page=${c}">${c}</a></li>`
+                }
+            }
+            // ul += `<li onclick="onChangePage('next')"><a href="project.html#">&gt;</a></li>`
+            $('.block-27').html(ul)
+        }
+        var url = window.location.href.split('://')
+            url[1] = url[1].split('/').shift()
+            url[1] = url[1].split(':').shift()
+        var api_url = url.join('://')
+
+        $( "#inquire-form" ).submit(function( event ) {
+            event.preventDefault();
+            var inputs = $('#inquire-form :input');
+            var values = {};
+            inputs.each(function() {
+                values[this.name] = $(this).val();
+            });
+            $.ajax({
+                type: "POST",
+                url: api_url+"/contact/inquire_push",
+                data: values,
+                dataType: "json",
+                success: function (result, status, xhr) {
+                    alert("Message has been sent successfully.")
+                    window.location.href="/index.html"
+                },
+                error: function (xhr, status, error) {
+                    alert("Result: " + status + " " + error + " " + xhr.status + " " + xhr.statusText)
+                }
+            });
+        });
+
+        function getData(p){
+            var total = 10
+            var page = 1
+            if(p > 0){
+                page = p
+            }
+            console.log(page)
+            $.ajax({
+                type: "GET",
+                url: window.location.origin+"/project/list?page="+page+"&pageSize=9",
+                dataType: "json",
+                success: function (result, status, xhr) {
+                    $('#project-container').empty()
+                    for(let i = 0 ; i < result.data.length; i++){
+                        var item = result.data[i]
+                        var html = `<div class="col-md-4 col-sm-6">
+                                        <div class="project">
+                                            <a href="${window.location.origin}/project-detail.html?p=${item.id}" class="img d-flex align-items-center"
+                                                style="background-image:url('images/uploads/${item.title_img}')">
+                                                <div class="icon d-flex align-items-center justify-content-center mb-5">
+                                                    <span class="fa fa-plus"></span>
+                                                </div>
+                                            </a>
+                                            <div class="text">
+                                                <span class="subheading">${item.category_name}</span>
+                                                <h3>${item.title}</h3>
+                                                <p><span class="fa fa-map-marker mr-1"></span>${item.location}</p>
+                                            </div>
+                                        </div>
+                                    </div>`
+                        $('#project-container').append(html)
+                        total = item.total
+                    }
+                    var cap = Math.ceil(total/9) ;
+                    var hash = window.location.hash.split('page=') ;
+                    var page = hash[1] ;
+                    var ul = `<ul>` ;
+                        // ul += `<li onclick="onChangePage('prev')"><a href="project.html#">&lt;</a></li>`
+                    for(c = 1 ; c <= cap ; c++){
+                        if(c == page){
+                            ul += `<li class="active"><span>${c}</span></li>`
+                        }else{
+                            ul += `<li onclick="onChangePage(${c})"><a href="project.html#page=${c}">${c}</a></li>`
+                        }
+                    }
+                    // ul += `<li onclick="onChangePage('next')"><a href="project.html#">&gt;</a></li>`
+                    $('.block-27').html(ul)
+                    
+                },
+                error: function (xhr, status, error) {
+                    console.error("Result: " + status + " " + error + " " + xhr.status + " " + xhr.statusText)
+                }
+            });
+            return total ;
+        }  
+    </script>
 </body>
 
 </html>
